--- a/Assets/Scripts/AimAssist/AimAssist.asmdef
+++ b/Assets/Scripts/AimAssist/AimAssist.asmdef
@@ -4,6 +4,7 @@
     "references": [
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:d8b63aba1907145bea998dd612889d6b",
+        "GUID:f3486d759f1e966428221c4fa50e2825",
         "GUID:0d4ca33ece313b34d8ba867a358ffad7"
     ],
     "includePlatforms": [],
