--- a/Assets/Scripts/Utility/Utility.asmdef
+++ b/Assets/Scripts/Utility/Utility.asmdef
@@ -1,8 +1,9 @@
 {
-    "name": "Utility",
+    "name": "ProjectUtilities",
     "rootNamespace": "",
     "references": [
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:f3486d759f1e966428221c4fa50e2825"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
